force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Actionable_List_ID__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Actionable_List_ID__c</fullName>
    <description>ID of the Actionable List record saved in the event the Actionable List lookup is deleted.</description>
    <inlineHelpText>Identifies the Actionable List record associated with this activity.</inlineHelpText>
    <label>Actionable List ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>