force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Activity_Send_Type__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Activity_Send_Type__c</fullName>
    <description>The type of activity for this send, either Email or SMS.</description>
    <inlineHelpText>Identifies email or SMS activity for this send.</inlineHelpText>
    <label>Activity Send Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>mcdm_15__DM_Send_Types</valueSetName>
    </valueSet>
</CustomField>