force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Approver__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the user that approved the DM Send for this activity.</description>
    <inlineHelpText>Identifies the user who approved the DM send related to this activity.</inlineHelpText>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DM_Activity_Log_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>