force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Campaign_Linked_Journey_ID__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Campaign_Linked_Journey_ID__c</fullName>
    <description>ID of the Campaign Linked Journey ID, saved in the event the Campaign Linked Journey ID lookup is deleted.</description>
    <inlineHelpText>Identifies the campaign linked journey if the lookup is deleted.</inlineHelpText>
    <label>Campaign Linked Journey ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>