force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Campaign_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Campaign_Member_ID__c</fullName>
    <description>ID of the campaign member if this was sent via a Campaign sending flow.</description>
    <inlineHelpText>Identifies the campaign member if the send used a campaign sending flow.</inlineHelpText>
    <label>Campaign Member ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>