force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Case__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Case object if this activity was related to a quick send from Case.</description>
    <inlineHelpText>The case object associated with this activity if it was related to a quick send activity.</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>DM Activity Log</relationshipLabel>
    <relationshipName>DM_Activity_Log</relationshipName>
    <type>Lookup</type>
</CustomField>