force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Case_ID__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Case_ID__c</fullName>
    <description>ID of the Case record saved in the event the Case lookup is deleted.</description>
    <inlineHelpText>Identifies the case record used in the send.</inlineHelpText>
    <label>Case ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>