force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__DM_Action_ID__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__DM_Action_ID__c</fullName>
    <description>Unique ID that is the same for an entire DM sending action. Can be used in reports to group DM sends by a sending action.</description>
    <inlineHelpText>Unique ID for the DM sending action. Use this ID in reports to group DM sends by a sending action.</inlineHelpText>
    <label>DM Action ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>