force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__DM_Auto_Send__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__DM_Auto_Send__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the DM Auto Send if this activity was related to a DM Auto Send.</description>
    <inlineHelpText>Identifies if the activity is related to a DM auto send.</inlineHelpText>
    <label>DM Auto Send</label>
    <referenceTo>mcdm_15__DM_Auto_Send__c</referenceTo>
    <relationshipLabel>DM Activity Log</relationshipLabel>
    <relationshipName>DM_Activity_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>