force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__DM_Auto_Send_ID__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__DM_Auto_Send_ID__c</fullName>
    <description>ID of the DM Auto Send, saved in the event the DM Auto Send lookup is deleted.</description>
    <inlineHelpText>Identifies the DM auto send related to this activity.</inlineHelpText>
    <label>DM Auto Send ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>