force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__DM_Error__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__DM_Error__c</fullName>
    <description>Stores DM specific error messages that have occured during or after injection.</description>
    <inlineHelpText>DM-specific error messages that occurred during or after injection.</inlineHelpText>
    <label>DM Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>