force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__DM_Submission__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__DM_Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the DM Submission object if this activity was related to an approvals sending flow.</description>
    <inlineHelpText>Identifies the DM submission object related to the approvals sending flow activity.</inlineHelpText>
    <label>DM Submission</label>
    <referenceTo>mcdm_15__Submission__c</referenceTo>
    <relationshipLabel>DM Activity Log</relationshipLabel>
    <relationshipName>DM_Activity_Log</relationshipName>
    <type>Lookup</type>
</CustomField>