force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__DM_Tracking_ID__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__DM_Tracking_ID__c</fullName>
    <description>Unique ID for this DM injection that is stored in the DM Entry Source DE, can be used to tie back Marketing Cloud data to the DM Activity Logs.</description>
    <inlineHelpText>Unique ID for the DM injection stored for the DM entry source. Use this ID to relate Marketing Cloud data to DM activity logs.</inlineHelpText>
    <label>DM Tracking ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>