force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Email_Pre_Header__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Email_Pre_Header__c</fullName>
    <description>The email pre header is stored here.</description>
    <inlineHelpText>The email pre header related to this activity.</inlineHelpText>
    <label>Email Pre Header</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>