force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Email_Subject_Line__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Email_Subject_Line__c</fullName>
    <description>The email main subject line is stored here.</description>
    <inlineHelpText>The email subject line related to this activity.</inlineHelpText>
    <label>Email Subject Line</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>