force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Has_Injection_Error__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Has_Injection_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This activity had errors while injecting onto a journey.</description>
    <inlineHelpText>Indicates an error related to the activity injection.</inlineHelpText>
    <label>Has Injection Error</label>
    <type>Checkbox</type>
</CustomField>