force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Has_P13n_Field_Mappings__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Has_P13n_Field_Mappings__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This activity has DM P13n Field Mappings applied to it via Extending the Entry Source DE.</description>
    <inlineHelpText>Indicates DM P13n field mappings applied to the activity via the Extending the Entry Source data extension.</inlineHelpText>
    <label>Has P13n Field Mappings</label>
    <type>Checkbox</type>
</CustomField>