force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__IER_Linking_ID__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__IER_Linking_ID__c</fullName>
    <description>Will be used in the future to link engagement data with IER records in the Marketing Cloud connect package.</description>
    <formula>mcdm_15__DM_Tracking_ID__c + mcdm_15__Email_ID__c + mcdm_15__SMS_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies link between engagement data and IER records in the Marketing Cloud Connect package.</inlineHelpText>
    <label>IER Linking ID</label>
    <type>Text</type>
</CustomField>