force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Initial_Sender__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Initial_Sender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the user that initiated the DM Send for this activity (may not match with Send From User).</description>
    <inlineHelpText>Identifies the user who initiated the DM send related to this activity. This value may not match the Send From User value.</inlineHelpText>
    <label>Initial Sender</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DM_Activity_Log</relationshipName>
    <type>Lookup</type>
</CustomField>