force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Injected_Contact__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Injected_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the contact that was injected onto the journey.</description>
    <inlineHelpText>Identifies the contact injected into the journey.</inlineHelpText>
    <label>Injected Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>DM Activity Log</relationshipLabel>
    <relationshipName>DM_Activity_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>