force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Is_Contact__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Is_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This activity was sent to a contact.</description>
    <inlineHelpText>Indicates that the activity was sent to a contact.</inlineHelpText>
    <label>Is Contact</label>
    <type>Checkbox</type>
</CustomField>