force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Is_Lead__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Is_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This activity was sent to a lead.</description>
    <inlineHelpText>Indicates that the activity was sent to a lead.</inlineHelpText>
    <label>Is Lead</label>
    <type>Checkbox</type>
</CustomField>