force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Is_Quick_Send__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Is_Quick_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This activity was sent through a Quick Send flow.</description>
    <inlineHelpText>Indicates that the activity was sent through a Quick Send flow.</inlineHelpText>
    <label>Is Quick Send</label>
    <type>Checkbox</type>
</CustomField>