force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Is_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Is_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This activity was scheduled.</description>
    <inlineHelpText>Indicates that the activity was sent through a scheduled flow.</inlineHelpText>
    <label>Is Scheduled</label>
    <type>Checkbox</type>
</CustomField>