force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Linked_Journey__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Linked_Journey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Linked Journey if this activity was related to a campaign linked journey.</description>
    <inlineHelpText>Identifies if the activity is related to a campaign linked journey.</inlineHelpText>
    <label>Campaign Linked Journey</label>
    <referenceTo>mcdm_15__MarketingCloudLinkedJourney__c</referenceTo>
    <relationshipLabel>DM Activity Log</relationshipLabel>
    <relationshipName>DM_Activity_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>