force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__MC_Triggered_Send_ID__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__MC_Triggered_Send_ID__c</fullName>
    <description>ID of the Marketing Cloud triggered send ID associated to this activity.</description>
    <inlineHelpText>Identifies the Marketing Cloud triggered send associated with this activity.</inlineHelpText>
    <label>MC Triggered Send ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>