force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Member_Email__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Member_Email__c</fullName>
    <description>Email of the member that was injected onto the journey.</description>
    <inlineHelpText>Email address for the member injected into the journey.</inlineHelpText>
    <label>Member Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>