force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Member_Name__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Member_Name__c</fullName>
    <description>Name of the member that was injected onto the journey.</description>
    <inlineHelpText>Name of the member injected into the journey.</inlineHelpText>
    <label>Member Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>