force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Quick_Send_Message__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Quick_Send_Message__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Quick Send Message object if this activity was related to a quick send flow.</description>
    <inlineHelpText>Indicates the Quick Send Message object related to the quick send activity.</inlineHelpText>
    <label>Quick Send Message</label>
    <referenceTo>mcdm_15__QuickSendJourney__c</referenceTo>
    <relationshipLabel>DM Activity Log</relationshipLabel>
    <relationshipName>DM_Activity_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>