force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Send_From_Email__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Send_From_Email__c</fullName>
    <description>Email of the Send From User (Running User or Record Owner).</description>
    <inlineHelpText>Email Address for the Send From User.</inlineHelpText>
    <label>Send From Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>