force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Send_From_Name__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Send_From_Name__c</fullName>
    <description>Name of the Send From User (Running User or Record Owner).</description>
    <inlineHelpText>Name of the Send From User.</inlineHelpText>
    <label>Send From Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>