force-app/main/default/objects/mcdm_15__DM_Activity_Log__c/fields/mcdm_15__Send_From_User__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Send_From_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the user determined by the DM Send From User settings, this can be the Running User or the Record Owner.</description>
    <inlineHelpText>Identifies the Send From User for this activity.</inlineHelpText>
    <label>Send From User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DM_Activity_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>